--- a/case study/css/styles.css
+++ b/case study/css/styles.css
@@ -11439,7 +11439,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/header-bg.jpg");
+  background-image: url("https://newland.net.vn/wp-content/uploads/2019/12/premier_village_phu_quoc_resort_1.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
