--- a/ss3/bai_tap/color-picker/src/app/color-picker/color-picker.component.html
+++ b/ss3/bai_tap/color-picker/src/app/color-picker/color-picker.component.html
@@ -1,6 +1,6 @@
 <div>
 <input type="color" id="head" name="head"
-       value="#e66465" (change)="getColor($event.target.valueOf())">
+       value="#e66465" (change)="getColor($event.target.value)">
 <label for="head">Head</label>
 </div>
 <h1 [ngStyle]="{color:color }">{{color}}</h1>
