--- a/angular-case-study/src/app/app.component.html
+++ b/angular-case-study/src/app/app.component.html
@@ -1,9 +1,12 @@
-<!--<app-header></app-header>-->
-<!--<app-footer></app-footer>-->
-<app-customer-list></app-customer-list>
+<app-header></app-header>
+<!--<app-customer-list></app-customer-list>-->
+<!--<app-service-list></app-service-list>-->
+
 <app-customer-create></app-customer-create>
-<app-service-list></app-service-list>
-<app-service-create></app-service-create>
-<app-contract-list></app-contract-list>
-<app-customer-edit></app-customer-edit>
-<app-service-edit></app-service-edit>
+<app-footer></app-footer>
+
+
+<!--<app-service-create></app-service-create>-->
+<!--<app-contract-list></app-contract-list>-->
+<!--<app-customer-edit></app-customer-edit>-->
+<!--<app-service-edit></app-service-edit>-->
