--- a/angular-case-study/src/app/customer-create/customer-create.component.html
+++ b/angular-case-study/src/app/customer-create/customer-create.component.html
@@ -75,10 +75,10 @@
         </div>
         <div class="d-flex justify-content-center">
           <div class="mx-2">
-            <a href="#" class="button button--cancel cancel-banner-btn">Cancel</a>
+            <a href="#" class="btn btn-info">Cancel</a>
           </div>
           <div class="mx-2">
-            <a href="customer-list.html" class="button button--active home-banner-btn">Create</a>
+            <a href="customer-list.html" class="btn btn-primary ">Create</a>
           </div>
         </div>
       </div>
