--- a/angular-case-study/src/app/header/header.component.html
+++ b/angular-case-study/src/app/header/header.component.html
@@ -1,26 +1,25 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand" href="#page-top"><img src="assets/assets/img/navbar-logo.svg" alt="..." /></a>
+    <a class="navbar-brand" href="home.html"><img src="https://www.furama.com/images/LOGOFurama_4C_Normal.png" alt="..." /></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       Menu
       <i class="fas fa-bars ms-1"></i>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" style="color:#191c1f;font-size: 20px" href="servivce-list.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link" style="color:#191c1f;font-size: 20px" href="customer-list.html">Customer</a></li>
+        <li class="nav-item"><a class="nav-link" style="color:#191c1f;font-size: 20px" href="contract-list.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" style="color:#191c1f;font-size: 20px" href="#team">Team</a></li>
+        <li class="nav-item"><a class="nav-link" style="color:#191c1f;font-size: 20px" href="#contact">About</a></li>
       </ul>
     </div>
   </div>
 </nav>
-<!-- Masthead-->
 <header class="masthead">
   <div class="container">
-    <div class="masthead-subheading">Welcome To Our Studio!</div>
-    <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
+    <div style="color:#101214;" class="masthead-subheading">Welcome To Furama</div>
+    <div style="color:#066173;" class="masthead-heading text-uppercase">Nice To Meet You</div>
     <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
   </div>
 </header>
