--- a/angular-case-study/src/app/app.component.html
+++ b/angular-case-study/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 <!--<app-customer-list></app-customer-list>-->
-<!--<app-service-list></app-service-list>-->
+<app-service-list></app-service-list>
 
-<app-customer-create></app-customer-create>
+<!--<app-customer-create></app-customer-create>-->
 <app-footer></app-footer>
 
 
