--- a/angular-case-study/src/app/customer-list/customer-list.component.html
+++ b/angular-case-study/src/app/customer-list/customer-list.component.html
@@ -9,7 +9,7 @@
     <div class="form-inline my-lg-3">
       <div class="row">
         <div class="col">
-          <input class="form-control mr-sm-2" type="search" placeholder="name" aria-label="Search"
+          <input class="form-control mr-sm-2" type="search" placeholder="Name" aria-label="Search"
                  name="name">
         </div>
         <div class="col">
@@ -28,9 +28,9 @@
             <option value="5"> Member</option>
           </select>
         </div>
-        <div class="col">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </div>
+      </div>
+      <div  class="col">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </div>
     </div>
     <table class="table table-borderless table-striped">
