--- a/angular-case-study/src/assets/css/styles.css
+++ b/angular-case-study/src/assets/css/styles.css
@@ -18,7 +18,7 @@
   top: 50%;
   transform: translate(-50%, -50%);
 }
-
+.col {display: flex;justify-content: flex-end;flex-direction: row;}
 
 .footer {
   background: blue;
