--- a/angular-case-study/src/app/contract-list/contract-list.component.html
+++ b/angular-case-study/src/app/contract-list/contract-list.component.html
@@ -2,7 +2,9 @@
   <div class="container">
 
     <h2>Contract List</h2>
-
+    <h2>
+      <a [routerLink]="['/contract-create']"><button class="btn btn-primary">Create New Contract</button></a>
+    </h2>
     <p class="mt-3">Searching contract </p>
     <div class="form-inline my-lg-3">
       <div class="row">
