--- a/angular-case-study/src/app/service-list/service-list.component.html
+++ b/angular-case-study/src/app/service-list/service-list.component.html
@@ -3,11 +3,12 @@
     <div class="text-center">
       <h2 class="section-heading text-uppercase" style="background:lightgoldenrodyellow">CÁC LOẠI PHÒNG</h2>
     </div>
+
     <div class="row">
       <div class="col-lg-4 col-sm-6 mb-4">
         <!-- Portfolio item 1-->
         <div class="portfolio-item">
-          <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
+          <a class="portfolio-link" data-bs-toggle="modal" [routerLink]="['/service-edit']">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
             </div>
@@ -20,10 +21,14 @@
           </div>
         </div>
       </div>
+
+
+
+
       <div class="col-lg-4 col-sm-6 mb-4">
         <!-- Portfolio item 2-->
         <div class="portfolio-item">
-          <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
+          <a class="portfolio-link" data-bs-toggle="modal" [routerLink]="['/service-edit']">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
             </div>
@@ -38,7 +43,7 @@
       <div class="col-lg-4 col-sm-6 mb-4">
         <!-- Portfolio item 3-->
         <div class="portfolio-item">
-          <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
+          <a class="portfolio-link" data-bs-toggle="modal" [routerLink]="['/service-edit']">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
             </div>
@@ -53,7 +58,7 @@
       <div class="col-lg-4 col-sm-6 mb-4">
         <!-- Portfolio item 4-->
         <div class="portfolio-item">
-          <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
+          <a class="portfolio-link" data-bs-toggle="modal"[routerLink]="['/service-edit']">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
             </div>
@@ -68,7 +73,7 @@
       <div class="col-lg-4 col-sm-6 mb-4">
         <!-- Portfolio item 5-->
         <div class="portfolio-item">
-          <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
+          <a class="portfolio-link" data-bs-toggle="modal" [routerLink]="['/service-edit']">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
             </div>
@@ -83,7 +88,7 @@
       <div class="col-lg-4 col-sm-6 mb-4">
         <!-- Portfolio item 6-->
         <div class="portfolio-item">
-          <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
+          <a class="portfolio-link" data-bs-toggle="modal" [routerLink]="['/service-edit']">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
             </div>
