--- a/angular-case-study/src/app/app.component.html
+++ b/angular-case-study/src/app/app.component.html
@@ -1,11 +1,13 @@
-<app-header></app-header>
+<!--<app-header></app-header>-->
 <!--<app-customer-list></app-customer-list>-->
-<app-service-list></app-service-list>
+<!--<app-service-list></app-service-list>-->
 
 <!--<app-customer-create></app-customer-create>-->
+<!--<app-footer></app-footer>-->
+<!--<app-home></app-home>-->
+<app-header></app-header>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
-
-
 <!--<app-service-create></app-service-create>-->
 <!--<app-contract-list></app-contract-list>-->
 <!--<app-customer-edit></app-customer-edit>-->
