--- a/angular-case-study/src/app/customer-edit/customer-edit.component.html
+++ b/angular-case-study/src/app/customer-edit/customer-edit.component.html
@@ -1,89 +1,80 @@
-<section class="section-margin section-margin--small">
-  <div class="container">
-    <div class="section-intro text-center pb-80px">
-      <h2>Edit customer</h2>
-    </div>
-    <div class="col-8 mx-auto">
-      <div class="mx-auto shadow-lg p-3 mb-5 bg-white rounded-lg">
-        <div class="form-group row">
-          <label for="name" class="col-sm-3 col-form-label">Name</label>
-          <div class="col-sm-9">
-            <input type="text" class="form-control" id="name">
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="code" class="col-sm-3 col-form-label">Code</label>
-          <div class="col-sm-9">
-            <input type="text" class="form-control" id="code">
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="birthday" class="col-sm-3 col-form-label">Birthday</label>
-          <div class="col-sm-9">
-            <input type="date" class="form-control" id="birthday">
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="idCard" class="col-sm-3 col-form-label">Id card</label>
-          <div class="col-sm-9">
-            <input type="number" class="form-control" id="idCard">
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="phone" class="col-sm-3 col-form-label">Phone</label>
-          <div class="col-sm-9">
-            <input type="number" class="form-control" id="phone">
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="email" class="col-sm-3 col-form-label">Email</label>
-          <div class="col-sm-9">
-            <input type="email" class="form-control" id="email">
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="address" class="col-sm-3 col-form-label">Address</label>
-          <div class="col-sm-9">
-            <input type="text" class="form-control" id="address">
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="gender" class="col-sm-3 col-form-label">Gender</label>
-          <div class="col-sm-9">
-            <select class="form-control"
-                    id="gender"
-                    name="gender">
-              <option value="-1">Other</option>
-              <option value="0">Female</option>
-              <option value="1">Male</option>
-            </select>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="customerType" class="col-sm-3 col-form-label">Customer type</label>
-          <div class="col-sm-9">
-            <select id="customerType"
-                    class="form-control">
-              <option value="null">Select Customer type</option>
-              <option value="1">Diamond</option>
-              <option value="2">Platinum</option>
-              <option value="3">Gold</option>
-              <option value="4">Silver</option>
-              <option value="5">Member</option>
-            </select>
-          </div>
-        </div>
-        <div class="d-flex justify-content-center">
-          <div class="mx-2">
-            <a href="#" class="btn btn-info">Cancel</a>
-          </div>
-          <div class="mx-2">
-            <a href="#" class="btn btn-primary">Edit</a>
-          </div>
+<div id="booking" class="section">
+  <div class="section-center">
+    <div class="container">
+      <div class="row">
+        <div class="booking-form">
+          <form>
+
+
+            <div class="form-group">
+              <span class="form-label">Name</span>
+              <input class="form-control" type="name" placeholder="Enter your name">
+            </div>
+
+            <div class="form-group">
+              <span class="form-label">Code</span>
+              <input class="form-control" type="name" placeholder="Enter code">
+            </div>
+
+
+            <div class="form-group">
+              <span class="form-label">Birthday</span>
+              <input class="form-control" type="date" required>
+            </div>
+
+
+
+
+            <div class="form-group">
+              <span class="form-label">Id card</span>
+              <input class="form-control" type="name" placeholder="Enter id card">
+            </div>
+
+            <div class="form-group">
+              <span class="form-label">Phone</span>
+              <input class="form-control" type="name" placeholder="Enter phone">
+            </div>
+
+            <div class="form-group">
+              <span class="form-label">Email</span>
+              <input class="form-control" type="email" placeholder="Enter your email">
+            </div>
+
+
+            <div class="form-group">
+              <span class="form-label">Address</span>
+              <input class="form-control" type="name" placeholder="Enter address">
+            </div>
+
+
+            <div class="form-group">
+              <span class="form-label">Gender</span>
+              <select class="form-control">
+                <option value="1">Male</option>
+                <option value="2">Female</option>
+              </select>
+              <span class="select-arrow"></span>
+            </div>
+
+
+            <div class="form-group">
+              <span class="form-label">Customer type</span>
+              <select class="form-control">
+                <option value="1">Diamond</option>
+                <option value="2">Platinum</option>
+                <option value="3">Gold</option>
+                <option value="4">Silver</option>
+                <option value="5">Member</option>
+              </select>
+              <span class="select-arrow"></span>
+            </div>
+
+            <div class="form-btn">
+              <button class="submit-btn">Submit</button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
-
   </div>
-
-</section>
+</div>
