--- a/angular-case-study/src/app/customer-list/customer-list.component.html
+++ b/angular-case-study/src/app/customer-list/customer-list.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2>List customer</h2>
     <h2>
-      <a href="customer-create.html"><button class="btn btn-primary">Create New Customer</button></a>
+      <a [routerLink]="['/customer-create']"><button class="btn btn-primary">Create New Customer</button></a>
     </h2>
 
     <p class="mt-3">Searching customer </p>
@@ -36,31 +36,32 @@
     <table class="table table-borderless table-striped">
       <thead class="thead-dark">
       <tr>
-        <th scope="col">#</th>
         <th scope="col">Code</th>
         <th scope="col">Name</th>
         <th scope="col">Gender</th>
+        <th scope="col">Date of birth</th>
+        <th scope="col">Id card</th>
+        <th scope="col">Address</th>
         <th scope="col">Phone</th>
         <th scope="col">Email</th>
-        <th scope="col">Id Card</th>
-        <th scope="col">Class</th>
-        <th scope="col">Address</th>
+        <th scope="col">Customer Type</th>
         <th scope="col">Delete</th>
         <th scope="col">Detail</th>
         <th scope="col">Update</th>
       </tr>
       </thead>
       <tbody>
-      <tr>
-        <td>1</td>
-        <td>KH-001</td>
-        <td>Nguyễn Quang Trường</td>
-        <td> Nam</td>
-        <td>0905386737</td>
-        <td>changtraitre2000@gmail.com</td>
-        <td>201791980</td>
-        <td>Diamond</td>
-        <td>Đà Nẵng</td>
+      <tr *ngFor="let customer of customers">
+        <td>{{customer.customerId}}</td>
+        <td>{{customer.customerName}}</td>
+        <td>{{customer.gender}}</td>
+        <td>{{customer.dateOfBirth}}</td>
+        <td>{{customer.identify}}</td>
+        <td>{{customer.address}}</td>
+        <td>{{customer.phone}}</td>
+        <td>{{customer.email}}</td>
+        <td>{{customer.type}}</td>
+
         <td>
           <button class="btn btn-danger" data-target="#deleteModal"
                   data-toggle="modal">
@@ -73,8 +74,8 @@
           </a>
         </td>
         <td>
-          <a>
-            <button class="btn btn-info">Update</button>
+          <a [routerLink]="['/customer-edit']">
+            <button  class="btn btn-info">Update</button>
           </a>
         </td>
       </tr>
