--- a/angular-case-study/src/app/service-create/service-create.component.html
+++ b/angular-case-study/src/app/service-create/service-create.component.html
@@ -1,99 +1,91 @@
-<section class="section-margin section-margin--small">
-  <div class="container">
-    <div class="section-intro text-center pb-80px">
-      <h2>Create New service</h2>
-    </div>
-    <div class="col-8 mx-auto">
-      <div class="mx-auto shadow-lg p-3 mb-5 bg-white rounded-lg">
-        <div class="form-group row">
-          <label for="name" class="col-sm-3 col-form-label">Name</label>
-          <div class="col-sm-9">
-            <input type="text" class="form-control" >
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="name" class="col-sm-3 col-form-label">Service Area</label>
-          <div class="col-sm-9">
-            <input type="text" class="form-control" >
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="name" class="col-sm-3 col-form-label">Service Cost</label>
-          <div class="col-sm-9">
-            <input type="text" class="form-control" >
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="name" class="col-sm-3 col-form-label">Maxium people</label>
-          <div class="col-sm-9">
-            <input type="text" class="form-control" id="name">
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="customerType" class="col-sm-3 col-form-label">Standard Room</label>
-          <div class="col-sm-9">
-            <select class="form-control">
-              <option value="null">Select Standard Room</option>
-              <option value="1">Room</option>
-              <option value="2">House</option>
-              <option value="3">Villa</option>
+<div id="booking" class="section">
+  <div class="section-center">
+    <div class="container">
+      <div class="row">
+        <div class="booking-form">
+          <form>
 
-            </select>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="email" class="col-sm-3 col-form-label">Other Convenience</label>
-          <div class="col-sm-9">
-            <input type="email" class="form-control" >
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="email" class="col-sm-3 col-form-label">Pool Area</label>
-          <div class="col-sm-9">
-            <input type="email" class="form-control" id="email">
-          </div>
-        </div>
+            <div class="form-group">
+              <span class="form-label">Name</span>
+              <input class="form-control" type="name" placeholder="Enter your name">
+            </div>
 
 
-        <div class="form-group row">
-          <label for="customerType" class="col-sm-3 col-form-label">Rent Type</label>
-          <div class="col-sm-9">
-            <select
-                    class="form-control">
-              <option value="null">Select Rent Type</option>
-              <option value="1">Year</option>
-              <option value="2">Month</option>
-              <option value="3">Day</option>
-              <option value="4">Hour</option>
-            </select>
-          </div>
-        </div>
+            <div class="form-group">
+              <span class="form-label">Service Area</span>
+              <input class="form-control" type="number" placeholder="Enter Service Area">
+            </div>
 
-        <div class="form-group row">
-          <label for="customerType" class="col-sm-3 col-form-label">Education Decree</label>
-          <div class="col-sm-9">
-            <select id="customerType"
-                    class="form-control">
-              <option value="null">Select Education Decree</option>
-              <option value="1">Trung cấp</option>
-              <option value="2">Cao đẳng</option>
-              <option value="3">Đại học</option>
-              <option value="4">Sau đại học</option>
-            </select>
-          </div>
-        </div>
 
-        <div class="d-flex justify-content-center">
-          <div class="mx-2">
-            <a href="#" class="button button--cancel cancel-banner-btn">Cancel</a>
-          </div>
-          <div class="mx-2">
-            <a href="customer-list.html" class="button button--active home-banner-btn">Create</a>
-          </div>
+            <div class="form-group">
+              <span class="form-label">Maxium people</span>
+              <input class="form-control" type="number" placeholder="Enter Maxium People">
+            </div>
+
+
+            <div class="form-group">
+              <span class="form-label">Service Cost</span>
+              <input class="form-control" type="number" placeholder="Enter Service Cost">
+            </div>
+
+
+            <div class="form-group">
+              <span class="form-label">Pool Area</span>
+              <input class="form-control" type="number" placeholder="Enter Pool Area">
+            </div>
+
+            <div class="row no-margin">
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <span class="form-label">Standard Room</span>
+                  <select class="form-control">
+                    <option value="1">Room</option>
+                    <option value="2">House</option>
+                    <option value="3">Villa</option>
+                  </select>
+                  <span class="select-arrow"></span>
+                </div>
+              </div>
+
+
+
+              <div class="col-sm-6">
+                <div class="form-group">
+                  <span class="form-label">Rent Type</span>
+                  <select class="form-control">
+                    <option value="1">Year</option>
+                    <option value="2">Month</option>
+                    <option value="3">Day</option>
+                    <option value="4">Hour</option>
+                  </select>
+                  <span class="select-arrow"></span>
+                </div>
+              </div>
+            </div>
+
+<!--            <div class="col-sm-1">-->
+              <div class="form-group">
+                <span class="form-label">Education Decree</span>
+                <select class="form-control">
+                  <option value="1">Trung cấp</option>
+                  <option value="2">Cao đẳng</option>
+                  <option value="3">Đại học</option>
+                  <option value="4">Sau đại học</option>
+                </select>
+                <span class="select-arrow"></span>
+              </div>
+<!--            </div>-->
+
+            <div class="form-group">
+              <span class="form-label">Other Convenience</span>
+              <input class="form-control" type="text" placeholder="Enter Other Convenience">
+            </div>
+            <div class="form-btn">
+              <button class="submit-btn">Booking</button>
+            </div>
+          </form>
         </div>
       </div>
-      <div class="col-lg-3"> </div>
     </div>
   </div>
-</section>
-
+</div>
