--- a/angular-case-study/src/app/customer-list/customer-list.component.html
+++ b/angular-case-study/src/app/customer-list/customer-list.component.html
@@ -30,10 +30,10 @@
         </div>
       </div>
       <div  class="col">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <button class="btn btn-outline-success my-2 my-sm-7" type="submit">Search</button>
       </div>
     </div>
-    <table class="table table-borderless table-striped">
+    <table id="tableStudent" class="table table-borderless table-striped">
       <thead class="thead-dark">
       <tr>
         <th scope="col">Code</th>
@@ -111,8 +111,6 @@
 <!-- ================ Explore section end ================= -->
 <hr>
 
-
-
 <!-- Modal -->
 
 <div class="modal fade" id="deleteModal" tabindex="-1" aria-hidden="true">
@@ -137,4 +135,14 @@
     </div>
   </div>
 </div>
+
+<script>
+  $(document).ready(function () {
+    $('#tableStudent').dataTable({
+      "dom": 'lrtip',
+      "lengthChange": false,
+      "pageLength": 3
+    });
+  });
+</script>
 
