--- a/angular-case-study/src/app/facility-list/facility-list.component.html
+++ b/angular-case-study/src/app/facility-list/facility-list.component.html
@@ -1,19 +1,19 @@
-<section class="page-section bg-light" id="portfolio" >
-  <div class="container">
+<section class="page-section bg-light" id="portfolio"  >
+  <div class="container" >
     <div class="text-center">
       <h2 class="section-heading text-uppercase" style="background:lightgoldenrodyellow">CÁC LOẠI PHÒNG</h2>
     </div>
 
-    <div class="row"  *ngFor="let facility of facilities">
-      <div class="col-lg-4 col-sm-6 mb-4" >
+    <div class="row" >
+      <div class="col-lg-4 col-sm-6 mb-4"   *ngFor="let facility of facilities">
         <!-- Portfolio item 1-->
-        <div class="portfolio-item">
+        <div class="portfolio-item" >
           <a class="portfolio-link" data-bs-toggle="modal" [routerLink]="['/facility-edit']">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
             </div>
             <img class="img-fluid" style="height: 221px"
-                 src="https://tbb-prod-apac.imgix.net/attachments/room_type_photos/images/722773/722773/160407105.jpg?auto=format,compress&fit=crop&crop=entropy&w=1536&q=75"
+                 [src]="facility.url"
                  width="700px" height="670px"/>
           </a>
 
@@ -23,57 +23,60 @@
             <div class="portfolio-caption-subheading text-muted">Diện tích : {{facility.area}}<sup>2</sup></div>
             <div class="portfolio-caption-subheading text-muted" style="font-weight: bolder" >Giá : {{facility.cost}}</div>
             </div>
-              <button type="button" class="btn btn-primary btn-lg" data-target="#deleteModal"
-                      data-toggle="modal">Delete</button>
+            <button class="custom-btn btn-12" data-target="#deleteModal"
+                    data-toggle="modal" ><span>Click!</span><span>Delete</span></button>
           </div>
         </div>
       </div>
 
 
-      <div class="col-lg-4 col-sm-6 mb-4" >
-        <!-- Portfolio item 2-->
-        <div class="portfolio-item">
-          <a class="portfolio-link" data-bs-toggle="modal" [routerLink]="['/facility-edit']">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-            </div>
-            <img class="img-fluid" style="height: 221px"
-                 src="https://tbb-prod-apac.imgix.net/attachments/room_type_photos/images/724017/724017/Bedroom.jpg?auto=format,compress&fit=crop&crop=entropy&w=1536&q=75"
-                 width="700px" height="700px"/>
-          </a>
-          <div class="portfolio-caption">
-            <div class="portfolio-caption-heading">{{facility.facilityName}}</div>
-            <div class="justify-content-between d-flex">
-            <div class="portfolio-caption-subheading text-muted">Diện tích : {{facility.area}} <sup>2</sup></div>
-              <div class="portfolio-caption-subheading text-muted"  style="font-weight: bolder">Giá : {{facility.cost}}</div>
-            </div>
-              <button type="button" class="btn btn-primary btn-lg" data-target="#deleteModal"
-                      data-toggle="modal">Delete</button>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 mb-4" >
-        <!-- Portfolio item 3-->
-        <div class="portfolio-item">
-          <a class="portfolio-link" data-bs-toggle="modal" [routerLink]="['/facility-edit']">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-            </div>
-            <img class="img-fluid" style="height: 221px"
-                 src="https://tbb-prod-apac.imgix.net/attachments/room_type_photos/images/722779/722779/63984540_XL.jpg?auto=format,compress&fit=crop&crop=entropy&w=1536&q=75"
-                 width="700px" height="700px"/>
-          </a>
-          <div class="portfolio-caption">
-            <div class="portfolio-caption-heading">{{facility.facilityName}}</div>
-            <div class="justify-content-between d-flex">
-            <div class="portfolio-caption-subheading text-muted">Diện tích : {{facility.area}} <sup>2</sup></div>
-              <div class="portfolio-caption-subheading text-muted" style="font-weight: bolder" >Giá : {{facility.cost}}</div>
-            </div>
-              <button type="button" class="btn btn-primary btn-lg" data-target="#deleteModal"
-                      data-toggle="modal">Delete</button>
-          </div>
-        </div>
-      </div>
+<!--      <div class="col-lg-4 col-sm-6 mb-4" >-->
+<!--        &lt;!&ndash; Portfolio item 2&ndash;&gt;-->
+<!--        <div class="portfolio-item">-->
+<!--          <a class="portfolio-link" data-bs-toggle="modal" [routerLink]="['/facility-edit']">-->
+<!--            <div class="portfolio-hover">-->
+<!--              <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>-->
+<!--            </div>-->
+<!--            <img class="img-fluid" style="height: 221px"-->
+<!--                 src="https://tbb-prod-apac.imgix.net/attachments/room_type_photos/images/724017/724017/Bedroom.jpg?auto=format,compress&fit=crop&crop=entropy&w=1536&q=75"-->
+<!--                 width="700px" height="700px"/>-->
+<!--          </a>-->
+<!--          <div class="portfolio-caption">-->
+<!--            <div class="portfolio-caption-heading">{{facility.facilityName}}</div>-->
+<!--            <div class="justify-content-between d-flex">-->
+<!--            <div class="portfolio-caption-subheading text-muted">Diện tích : {{facility.area}} <sup>2</sup></div>-->
+<!--              <div class="portfolio-caption-subheading text-muted"  style="font-weight: bolder">Giá : {{facility.cost}}</div>-->
+<!--            </div>-->
+<!--            <button class="custom-btn btn-12" data-target="#deleteModal"-->
+<!--                    data-toggle="modal" ><span>Click!</span><span>Delete</span></button>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="col-lg-4 col-sm-6 mb-4" >-->
+<!--        &lt;!&ndash; Portfolio item 3&ndash;&gt;-->
+<!--        <div class="portfolio-item">-->
+<!--          <a class="portfolio-link" data-bs-toggle="modal" [routerLink]="['/facility-edit']">-->
+<!--            <div class="portfolio-hover">-->
+<!--              <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>-->
+<!--            </div>-->
+<!--            <img class="img-fluid" style="height: 221px"-->
+<!--                 src="https://tbb-prod-apac.imgix.net/attachments/room_type_photos/images/722779/722779/63984540_XL.jpg?auto=format,compress&fit=crop&crop=entropy&w=1536&q=75"-->
+<!--                 width="700px" height="700px"/>-->
+<!--          </a>-->
+<!--          <div class="portfolio-caption">-->
+<!--            <div class="portfolio-caption-heading">{{facility.facilityName}}</div>-->
+<!--            <div class="justify-content-between d-flex">-->
+<!--            <div class="portfolio-caption-subheading text-muted">Diện tích : {{facility.area}} <sup>2</sup></div>-->
+<!--              <div class="portfolio-caption-subheading text-muted" style="font-weight: bolder" >Giá : {{facility.cost}}</div>-->
+<!--            </div>-->
+<!--&lt;!&ndash;              <button type="button" class="btn btn-primary btn-lg" data-target="#deleteModal"&ndash;&gt;-->
+<!--&lt;!&ndash;                      data-toggle="modal">Delete</button>&ndash;&gt;-->
+
+<!--            <button class="custom-btn btn-12" data-target="#deleteModal"-->
+<!--                    data-toggle="modal" ><span>Click!</span><span>Delete</span></button>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
 
 <!--      <div class="col-lg-4 col-sm-6 mb-4">-->
 <!--        &lt;!&ndash; Portfolio item 4&ndash;&gt;-->
@@ -168,7 +171,7 @@
 
           <input type="hidden" name="id" id="idDelete">
           <button type="button" class="btn btn-secondary mx-1" data-dismiss="modal">Cancel</button>
-          <button type="submit" class="btn btn-danger mx-1 ">Delete</button>
+          <button type="submit" onclick="submitFormDelete()"  class="btn btn-danger mx-1 ">Delete</button>
       </div>
     </div>
   </div>
