--- a/angular-case-study/src/app/contract-manager/contract-list/contract-list.component.html
+++ b/angular-case-study/src/app/contract-manager/contract-list/contract-list.component.html
@@ -3,7 +3,9 @@
 
     <h2>Contract List</h2>
     <h2>
-      <a [routerLink]="['/contract-create']"><button class="btn btn-primary">Create New Contract</button></a>
+      <a [routerLink]="['/contract-create']">
+        <button class="btn btn-primary">Create New Contract</button>
+      </a>
     </h2>
     <p class="mt-3">Searching contract </p>
     <div class="form-inline my-lg-3">
@@ -38,14 +40,15 @@
       <tbody>
       <tr *ngFor="let contract of contracts">
         <td>{{contract.contractId}}</td>
-        <td>{{contract.customerName}}</td>
+        <td>{{contract.contractName}}</td>
         <td>{{contract.serviceName}}</td>
         <td>{{contract.startDay|date:'dd/MM/yyyy'}}</td>
         <td>{{contract.endDay|date:'dd/MM/yyyy'}}</td>
         <td>{{contract.deposit|currency:'VND'}}</td>
 
         <td>
-          <button class="btn btn-danger" data-target="#deleteModal"
+          <button (click)="deleteModal(contract.contractId, contract.contractName)"
+                  class="btn btn-danger" data-target="#deleteModal"
                   data-toggle="modal">
             Delete
           </button>
@@ -57,7 +60,7 @@
         </td>
         <td>
           <a [routerLink]="['/contract-edit']">
-            <button  class="btn btn-info">Update</button>
+            <button class="btn btn-info">Update</button>
           </a>
         </td>
 
@@ -104,14 +107,15 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>Do you really want to delete contract
-          <span class="text-danger font-weight-bold" id="nameDelete"></span>
-        </p>
+        <p>Do you really want to delete contract?</p>
+        <span class="text-danger font-weight-bold">{{idDelete}}</span>
+        <br>
+        <span class="text-danger font-weight-bold">{{nameDelete}}</span>
       </div>
       <div class="modal-footer">
         <input type="hidden" name="id" id="idDelete">
         <button type="button" class="btn btn-secondary mx-1" data-dismiss="modal">Cancel</button>
-        <button type="submit" class="btn btn-danger mx-1 ">Delete</button>
+        <button (click)="deleteContract(idDelete)" type="submit" class="btn btn-danger mx-1 " data-dismiss="modal">Delete</button>
       </div>
     </div>
   </div>
