--- a/angular-case-study/src/app/customer-manager/customer-list/customer-list.component.html
+++ b/angular-case-study/src/app/customer-manager/customer-list/customer-list.component.html
@@ -2,7 +2,9 @@
   <div class="container">
     <h2>List customer</h2>
     <h2>
-      <a [routerLink]="['/customer-create']"><button class="btn btn-primary">Create New Customer</button></a>
+      <a [routerLink]="['/customer-create']">
+        <button class="btn btn-primary">Create New Customer</button>
+      </a>
     </h2>
 
     <p class="mt-3">Searching customer </p>
@@ -29,7 +31,7 @@
           </select>
         </div>
       </div>
-      <div  class="col">
+      <div class="col">
         <button class="btn btn-outline-success my-2 my-sm-7" type="submit">Search</button>
       </div>
     </div>
@@ -40,10 +42,10 @@
         <th scope="col">Name</th>
         <th scope="col">Gender</th>
         <th scope="col">Date of birth</th>
-<!--        <th scope="col">Id card</th>-->
+        <!--        <th scope="col">Id card</th>-->
         <th scope="col">Address</th>
         <th scope="col">Phone</th>
-<!--        <th scope="col">Email</th>-->
+        <!--        <th scope="col">Email</th>-->
         <th scope="col">Customer Type</th>
         <th scope="col">Delete</th>
         <th scope="col">Detail</th>
@@ -56,15 +58,17 @@
         <td>{{customer.customerName}}</td>
         <td>{{customer.gender}}</td>
         <td>{{customer.dateOfBirth}}</td>
-<!--        <td>{{customer.identify}}</td>-->
+        <!--        <td>{{customer.identify}}</td>-->
         <td>{{customer.address}}</td>
         <td>{{customer.phone}}</td>
-<!--        <td>{{customer.email}}</td>-->
-        <td>{{customer.type}}</td>
+        <!--        <td>{{customer.email}}</td>-->
+        <td>{{customer.customerType}}</td>
 
         <td>
-          <button class="btn btn-danger" data-target="#deleteModal"
-                  data-toggle="modal">
+          <button
+            (click)="deleteModal(customer.customerId, customer.customerName)" class="btn btn-danger"
+            data-target="#deleteModal"
+            data-toggle="modal">
             Delete
           </button>
         </td>
@@ -74,8 +78,8 @@
           </a>
         </td>
         <td>
-          <a [routerLink]="['/customer-edit']">
-            <button  class="btn btn-info">Update</button>
+          <a [routerLink]="['/customer-edit',customer.customerId]">
+            <button class="btn btn-info">Update</button>
           </a>
         </td>
       </tr>
@@ -123,14 +127,18 @@
         </button>
       </div>
       <div class="modal-body">
-        <p>Do you really want to delete customer
-          <span class="text-danger font-weight-bold" id="nameDelete"></span>
-        </p>
+        <p>Do you really want to delete customer?</p>
+        <span class="text-danger font-weight-bold">{{idDelete}}</span>
+        <br>
+        <span class="text-danger font-weight-bold">{{nameDelete}}</span>
+
       </div>
       <div class="modal-footer">
-          <input type="hidden" name="id" id="idDelete">
-          <button type="button" class="btn btn-secondary mx-1" data-dismiss="modal">Cancel</button>
-          <button type="submit" class="btn btn-danger mx-1 ">Delete</button>
+        <input type="hidden" name="id" id="idDelete">
+        <button type="button" class="btn btn-secondary mx-1" data-dismiss="modal">Cancel</button>
+        <button (click)="deleteProduct(idDelete)" type="submit" class="btn btn-danger mx-1" data-dismiss="modal">
+          Delete
+        </button>
       </div>
     </div>
   </div>
