--- a/angular-case-study/src/app/contract-manager/contract-edit/contract-edit.component.html
+++ b/angular-case-study/src/app/contract-manager/contract-edit/contract-edit.component.html
@@ -3,18 +3,17 @@
     <div class="container">
       <div class="row">
         <div class="booking-form">
-          <form>
+          <form [formGroup]="contractForm" (ngSubmit)="updateContract(contractId)">
 
 
             <div class="form-group">
               <span class="form-label">Customer Name</span>
-              <select class="form-control">
+              <select formControlName="customerName" class="form-control">
                 <option value="1">Nguyen Văn A</option>
                 <option value="2">Le Văn B</option>
               </select>
               <span class="select-arrow"></span>
             </div>
-
 
 
             <div class="form-group">
@@ -29,7 +28,7 @@
 
             <div class="form-group">
               <span class="form-label">Service</span>
-              <select class="form-control">
+              <select formControlName="serviceName" class="form-control">
                 <option value="1">Ocean Suite</option>
                 <option value="2">Villa Ocean View</option>
               </select>
@@ -40,30 +39,30 @@
               <div class="col-sm-6">
                 <div class="form-group">
                   <span class="form-label">Start Day</span>
-                  <input class="form-control" type="date" required>
+                  <input formControlName="startDay" class="form-control" type="date" required>
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="form-group">
                   <span class="form-label">End Day</span>
-                  <input class="form-control" type="date" required>
+                  <input formControlName="endDay" class="form-control" type="date" required>
                 </div>
               </div>
             </div>
 
             <div class="form-group">
               <span class="form-label">Deposit</span>
-              <input class="form-control" type="name" placeholder="Enter Deposit">
+              <input formControlName="deposit" class="form-control" type="name" placeholder="Enter Deposit">
             </div>
 
             <div class="form-group">
               <span class="form-label">Total Money</span>
-              <input class="form-control" type="number" placeholder="Enter Total Money">
+              <input formControlName="total" class="form-control" type="number" placeholder="Enter Total Money">
             </div>
 
 
             <div class="form-btn">
-              <button class="submit-btn">Update</button>
+              <button type="submit" [disabled]="!contractForm.valid" class="submit-btn">Update</button>
             </div>
           </form>
         </div>
