--- a/angular-case-study/src/app/contract-manager/contract-list/contract-list.component.html
+++ b/angular-case-study/src/app/contract-manager/contract-list/contract-list.component.html
@@ -3,7 +3,7 @@
 
     <h2>Contract List</h2>
     <h2>
-      <a [routerLink]="['/contract-create']">
+      <a [routerLink]="['/contract/create']">
         <button class="btn btn-primary">Create New Contract</button>
       </a>
     </h2>
@@ -59,7 +59,7 @@
           </a>
         </td>
         <td>
-          <a [routerLink]="['/contract-edit']">
+          <a [routerLink]="['/contract/edit']">
             <button class="btn btn-info">Update</button>
           </a>
         </td>
