--- a/angular-case-study/src/app/customer-manager/customer-edit/customer-edit.component.html
+++ b/angular-case-study/src/app/customer-manager/customer-edit/customer-edit.component.html
@@ -109,7 +109,7 @@
               </div>
             </div>
             <div class="form-btn">
-              <button class="submit-btn">Update</button>
+              <button type="submit" [disabled]="!customerForm.valid" class="submit-btn">Update</button>
             </div>
           </form>
         </div>
