--- a/angular-case-study/src/app/contract-manager/contract-create/contract-create.component.html
+++ b/angular-case-study/src/app/contract-manager/contract-create/contract-create.component.html
@@ -88,7 +88,7 @@
 
 
             <div class="form-btn">
-              <button class="submit-btn">Contract</button>
+              <button type="submit" [disabled]="!contractForm.valid" class="submit-btn">Contract</button>
             </div>
           </form>
         </div>
