--- a/angular-case-study/src/app/customer-manager/customer-create/customer-create.component.html
+++ b/angular-case-study/src/app/customer-manager/customer-create/customer-create.component.html
@@ -111,7 +111,7 @@
               </div>
             </div>
             <div class="form-btn">
-              <button class="submit-btn">Submit</button>
+              <button type="submit" [disabled]="!customerForm.valid" class="submit-btn">Submit</button>
             </div>
           </form>
         </div>
